--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.vertigo</groupId>
@@ -24,15 +25,15 @@
 			<artifactId>vertigo-commons-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-			
-		
+
+
 		<dependency>
 			<groupId>com.mchange</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>0.9.5.2</version>
 			<optional>true</optional>
 		</dependency>
-	
+
 		<!--script -->
 		<dependency>
 			<groupId>org.codehaus.janino</groupId>
@@ -40,7 +41,7 @@
 			<version>2.7.8</version>
 			<optional>false</optional><!-- pour JaninoExpressionEvaluatorPlugin -->
 		</dependency>
-		
+
 		<!--cache -->
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
@@ -49,24 +50,24 @@
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-		    <artifactId>slf4j-api</artifactId>
-		    <version>1.7.22</version> <!-- pour EhCachePlugin -->
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.22</version> <!-- pour EhCachePlugin -->
 		</dependency>
-				
+
 		<dependency>
-		    <groupId>com.google.code.gson</groupId>
-		    <artifactId>gson</artifactId>
-		    <version>2.8.0</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
 		</dependency>
-		
+
 		<!--redis -->
 		<dependency>
-		    <groupId>redis.clients</groupId>
-		    <artifactId>jedis</artifactId>
-   			 <version>2.9.0</version>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
 		</dependency>
-		
-		
+
+
 		<!-- tests -->
 		<dependency>
 			<groupId>io.vertigo</groupId>
@@ -81,6 +82,6 @@
 			<version>1.4.193</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 	</dependencies>
 </project>
