--- a/vertigo-vega-impl/pom.xml
+++ b/vertigo-vega-impl/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -17,7 +18,7 @@
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-core</artifactId>
 			<version>${project.version}</version>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-commons-impl</artifactId><!-- for ConfigPlugin and ResourceResolverPlugin -->
@@ -25,17 +26,17 @@
 		</dependency>
 		<dependency>
 			<groupId>io.vertigo</groupId>
-			<artifactId>vertigo-account-impl</artifactId> <!--  depends of SecurityManagerImpl for WsWebServiceHandler -->
-			<version>${project.version}</version>	
+			<artifactId>vertigo-account-impl</artifactId> <!-- depends of SecurityManagerImpl for WsWebServiceHandler -->
+			<version>${project.version}</version>
 		</dependency>
-		<dependency> 
+		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-vega-api</artifactId>
 			<version>${project.version}</version>
-		</dependency>		
-		
+		</dependency>
+
 		<!-- libs -->
-		
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -58,16 +59,16 @@
 					<artifactId>javax.servlet</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>	
-		
+		</dependency>
+
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
 			<version>0.9.10</version>
-			<optional>true</optional> <!-- For ClassPathWebServiceLoaderPlugin -->	
+			<optional>true</optional> <!-- For ClassPathWebServiceLoaderPlugin -->
 		</dependency>
-		
-		<!-- test -->	
+
+		<!-- test -->
 		<dependency>
 			<groupId>io.vertigo</groupId>
 			<artifactId>vertigo-core</artifactId>
@@ -87,17 +88,17 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-			
+
 		<!-- For Rest Webservice testing -->
 		<dependency>
-	      <groupId>io.rest-assured</groupId>
-	      <artifactId>rest-assured</artifactId>
-	      <version>3.0.1</version>
-	      <scope>test</scope>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>3.0.1</version>
+			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- exporter For Rest Webservice export testing -->
-	    <dependency>
+		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
 			<version>2.1.7</version> <!-- dernière version en license LGPL/MPL -->
@@ -118,18 +119,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
-		<!-- 
-		 xml-apis est déjà tiré en 1.0.b2 par hibernate 5, donc on laisse la version de base.
-		 <dependency>
-			<groupId>xml-apis</groupId>
-			<artifactId>xml-apis</artifactId>
-			<version>1.3.04</version> com.lowagie 2.1.7 contient la 1.0.b2 qui est incompatible avec le jdk 7 (sur Node)
-			<scope>test</scope>		
-		</dependency> -->
-		
-		<!--/exporter-->
-		
+
+		<!-- xml-apis est déjà tiré en 1.0.b2 par hibernate 5, donc on laisse la version de base. <dependency> 
+			<groupId>xml-apis</groupId> <artifactId>xml-apis</artifactId> <version>1.3.04</version> com.lowagie 2.1.7 
+			contient la 1.0.b2 qui est incompatible avec le jdk 7 (sur Node) <scope>test</scope> </dependency> -->
+
+		<!--/exporter -->
+
 	</dependencies>
-	
+
 </project>
