--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -170,6 +170,7 @@
 				<version>2.8.2</version>
 			</plugin>
 		</plugins>
+		
 	</build>
 	<profiles>
 		<profile>
@@ -225,6 +226,30 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>
+			<id>jenkins</id>
+			<build>
+				<plugins>
+					<plugin>
+		              <groupId>org.owasp</groupId>
+		              <artifactId>dependency-check-maven</artifactId>
+		              <version>1.4.5</version>
+		              <executions>
+		                  <execution>
+		                      <goals>
+		                          <goal>check</goal>
+		                      </goals>
+		                  </execution>
+		              </executions>
+		              <configuration>
+		              	<!-- update will be done in a dedicated task -->
+		              	<autoUpdate>false</autoUpdate>
+		              	<format>ALL</format>
+		              </configuration>
+		            </plugin>
+	            </plugins>
+            </build>
 		</profile>
 	</profiles>
 
