fix postgresql dependency
https://repo1.maven.org/maven2/postgresql/postgresql/9.3-1102.jdbc41 does not exist

--- a/vertigo-database-impl/pom.xml
+++ b/vertigo-database-impl/pom.xml
@@ -63,9 +63,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.3-1102.jdbc41</version>
+			<version>9.3-1102-jdbc41</version>
 			<scope>test</scope>
 		</dependency>
 
