--- a/vertigo-studio/pom.xml
+++ b/vertigo-studio/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
 		<version>0.9.5-SNAPSHOT</version>
+		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
 	<artifactId>vertigo-studio</artifactId>
