--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -62,7 +62,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<vertigo.version>1.0.0</vertigo.version>
+		<vertigo.version>1.1.0-SNAPSHOT</vertigo.version>
 
 		<!-- For global junit test coverage -->
 		<jacoco.destFile>${project.basedir}/../target/jacoco-it.exec</jacoco.destFile>
