[Dynamo] Added search plugin for elasticsearch 2.4.x and lucene 5.5

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
 		<module>vertigo-dynamo-api</module>
 		<module>vertigo-dynamo-impl</module>
+		<module>vertigo-dynamo-plugin-elasticsearch_2_4</module>
 		
 		<module>vertigo-account-api</module>
 		<module>vertigo-account-impl</module>
