[Dynamo] Update ElasticSearch to 5.5.1, and Lucen to 6.6.0

--- a/vertigo-dynamo-impl/src/test/java/io/vertigo/dynamo/search/indexconfig/elasticsearch.yml
+++ b/vertigo-dynamo-impl/src/test/java/io/vertigo/dynamo/search/indexconfig/elasticsearch.yml
@@ -1,9 +1,9 @@
 index :
     analysis :
-        analyzer :
+        normalizer :
             code :
-                tokenizer : keyword
-                filter : [standard]
+                type : custom          
+        analyzer :
             multiple_code :
                 tokenizer : piped_keywords
                 filter : [standard]
