--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -75,13 +75,13 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>5.5.4</version> <!-- 5.5.4 compatible with ElasticSearch 2.4.5 -->
+			<version>6.6.0</version> <!-- 6.6.0 compatible with ElasticSearch 5.5.1 -->
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
-			<version>5.5.4</version> <!-- 5.5.4 compatible with ElasticSearch 2.4.5 -->
+			<version>6.6.0</version> <!-- 6.6.0 compatible with ElasticSearch 5.5.1 -->
 			<optional>true</optional>
 		</dependency>
 
@@ -109,9 +109,26 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<version>2.4.5</version>
+			<version>5.5.1</version>
 			<optional>true</optional><!-- EsTransportSearchServicesPlugin -->
 		</dependency>
+		<dependency>
+		    <groupId>org.elasticsearch.client</groupId>
+		    <artifactId>transport</artifactId>
+		    <version>5.5.1</version>
+		    <optional>true</optional><!-- EsTransportSearchServicesPlugin -->
+		</dependency>
+		<dependency>
+	        <groupId>org.elasticsearch.plugin</groupId>
+	        <artifactId>transport-netty4-client</artifactId> 
+	        <version>5.5.1</version> <!-- required by ESEmbeddedSearchServicesPlugin -->
+	        <optional>true</optional>
+	    </dependency>
+	     <dependency><!-- required by elasticsearch -->
+	        <groupId>org.apache.logging.log4j</groupId>
+	        <artifactId>log4j-core</artifactId>
+	        <version>2.8.2</version>
+	    </dependency>
 
 		<!-- Connections Pool -->
 		<dependency>
