--- a/vertigo-studio/pom.xml
+++ b/vertigo-studio/pom.xml
@@ -31,6 +31,12 @@
 			<artifactId>vertigo-account-impl</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.vertigo</groupId>
