--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -40,7 +40,7 @@
 		<connection>scm:git:https://github.com/KleeGroup/vertigo.git</connection>
 		<developerConnection>scm:git:https://github.com/KleeGroup/vertigo.git</developerConnection>
 		<url>scm:git:https://github.com/KleeGroup/vertigo.git</url>
-		<tag>vertigo-0.9.5-SNAPSHOT</tag>
+		<tag>vertigo-2.0.0-SNAPSHOT</tag>
 	</scm>
 
 	<distributionManagement>
@@ -62,7 +62,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<vertigo.version>1.1.0</vertigo.version>
+		<vertigo.version>2.0.0-SNAPSHOT</vertigo.version>
 
 		<!-- For global junit test coverage -->
 		<jacoco.destFile>${project.basedir}/../target/jacoco-it.exec</jacoco.destFile>
