--- a/vertigo-dynamo-impl/src/test/java/io/vertigo/dynamo/search/indexconfig/elasticsearch.yml
+++ b/vertigo-dynamo-impl/src/test/java/io/vertigo/dynamo/search/indexconfig/elasticsearch.yml
@@ -2,7 +2,10 @@ index :
     analysis :
         normalizer :
             code :
-                type : custom          
+                type : custom
+            sortable :
+                type : custom
+                filter : ["lowercase", "asciifolding"]  
         analyzer :
             multiple_code :
                 tokenizer : piped_keywords
