--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -68,7 +68,7 @@
 		<dependency>
 			<groupId>com.sleepycat</groupId>
 			<artifactId>je</artifactId>
-			<version>5.0.84</version>
+			<version>7.5.11</version><!-- this version need Oracle repo. For maven central could be downgraded to 5.0.84, conf and usage fully compatible -->
 		</dependency>
 
 		<!-- CollectionsManager/LuceneIndexPlugin -->
