--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -159,12 +159,12 @@
 		<!--/exporter -->
 	</dependencies>
 
-	<!-- repo pour com.sleepycat.je:5.0.84 -->
+	<!-- repo pour com.sleepycat.je:7.5.11 -->
 	<repositories>
 		<repository>
-			<id>boundless</id>
-			<name>boundless</name>
-			<url>http://repo.boundlessgeo.com/main</url>
+			<id>Oracle Download</id>
+			<name>Oracle Download</name>
+			<url>http://download.oracle.com/maven/</url>
 		</repository>
 	</repositories>
 </project>
