--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -75,13 +75,13 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>6.6.1</version> <!-- 6.6.1 compatible with ElasticSearch 5.6.2 -->
+			<version>6.6.1</version> <!-- 6.6.1 compatible with ElasticSearch 5.6.8 -->
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
-			<version>6.6.1</version> <!-- 6.6.1 compatible with ElasticSearch 5.6.2 -->
+			<version>6.6.1</version> <!-- 6.6.1 compatible with ElasticSearch 5.6.8 -->
 			<optional>true</optional>
 		</dependency>
 
@@ -95,13 +95,13 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.2.11.Final</version>
+			<version>5.2.15.Final</version>
 			<optional>true</optional> <!-- HibernateConnectionProviderPlugin -->
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>5.2.11.Final</version>
+			<version>5.2.15.Final</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -109,21 +109,28 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<version>5.6.2</version>
+			<version>5.6.8</version>
 			<optional>true</optional><!-- EsTransportSearchServicesPlugin -->
 		</dependency>
 		<dependency>
 		    <groupId>org.elasticsearch.client</groupId>
 		    <artifactId>transport</artifactId>
-		    <version>5.6.2</version>
+		    <version>5.6.8</version>
 		    <optional>true</optional><!-- EsTransportSearchServicesPlugin -->
 		</dependency>
 		<dependency>
 	        <groupId>org.elasticsearch.plugin</groupId>
 	        <artifactId>transport-netty4-client</artifactId> 
-	        <version>5.6.2</version> <!-- required by ESEmbeddedSearchServicesPlugin -->
+	        <version>5.6.8</version> <!-- required by ESEmbeddedSearchServicesPlugin -->
 	        <optional>true</optional>
 	    </dependency>
+	    <!-- ES requires 2.9.1 -->
+	    <dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-api</artifactId>
+		    <version>2.11.0</version>
+		</dependency>
+		
 		<!-- Connections Pool -->
 		<dependency>
 			<groupId>com.mchange</groupId>
