--- a/vertigo-vega-api/pom.xml
+++ b/vertigo-vega-api/pom.xml
@@ -25,7 +25,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.vertigo</groupId>
-			<artifactId>vertigo-account-api</artifactId><!-- for UserSession -->
+			<artifactId>vertigo-account-api</artifactId><!-- for UserSession and VSecurityException-->
 			<version>${project.version}</version>
 		</dependency>
 
