--- a/vertigo-dynamo-plugin-elasticsearch_2_4/pom.xml
+++ b/vertigo-dynamo-plugin-elasticsearch_2_4/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>1.1.2</version>
 	</parent>
 
 	<artifactId>vertigo-dynamo-plugin-elasticsearch_2_4</artifactId>
