[database] add timeseries in database module
need to move to influxdb-java 2.8 (but later)

--- a/vertigo-database-impl/pom.xml
+++ b/vertigo-database-impl/pom.xml
@@ -30,6 +30,14 @@
 			<version>5.2.15.Final</version>
 			<optional>true</optional> <!-- HibernateConnectionProviderPlugin -->
 		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.influxdb</groupId>
+			<artifactId>influxdb-java</artifactId>
+			<version>2.7</version>
+			<optional>true</optional>  <!-- InfluxDbTimeSeriesPlugin -->
+		</dependency>
 
 		<!-- tests -->
 		<dependency>
