--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -28,13 +28,18 @@
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib-nodep</artifactId>
-			<version>3.2.6</version>
+			<version>3.2.6</version> <!-- proxies -->
 		</dependency>
 		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
 			<version>0.9.11</version>
-		</dependency>
+		</dependency> <!-- discovery -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency> <!-- json config -->
 	</dependencies>
 
 </project>
