--- a/vertigo-core/pom.xml
+++ b/vertigo-core/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.2</version>
 		</dependency> <!-- json config -->
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.23</version>  <!-- yaml config -->
+		</dependency>
 	</dependencies>
 
 </project>
