[Dynamo] Upgraded ES version from 5.6.8 to 6.6.0, and Lucene from 6.6.1 to 7.6.0

--- a/vertigo-dynamo-impl/src/test/java/io/vertigo/dynamo/search/indexconfig/elasticsearch.yml
+++ b/vertigo-dynamo-impl/src/test/java/io/vertigo/dynamo/search/indexconfig/elasticsearch.yml
@@ -14,11 +14,9 @@ index :
                 tokenizer : standard
                 filter : [standard, lowercase, snowball, elision]
         tokenizer :
-            keyword :
-                type : keyword
             piped_keywords :
                 type : pattern
-                pattern : '([|])'
+                pattern : '|'
         filter :
             snowball:
                 type : snowball
