--- a/vertigo-dynamo-impl/pom.xml
+++ b/vertigo-dynamo-impl/pom.xml
@@ -75,13 +75,13 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>6.6.1</version> <!-- 6.6.1 compatible with ElasticSearch 5.6.8 -->
+			<version>7.6.0</version> <!-- 7.6.0 compatible with ElasticSearch 6.6.0 -->
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
-			<version>6.6.1</version> <!-- 6.6.1 compatible with ElasticSearch 5.6.8 -->
+			<version>7.6.0</version> <!-- 7.6.0 compatible with ElasticSearch 6.6.0 -->
 			<optional>true</optional>
 		</dependency>
 
@@ -89,26 +89,33 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<version>5.6.8</version>
+			<version>6.6.0</version>
 			<optional>true</optional><!-- EsTransportSearchServicesPlugin -->
 		</dependency>
 		<dependency>
 		    <groupId>org.elasticsearch.client</groupId>
 		    <artifactId>transport</artifactId>
-		    <version>5.6.8</version>
+		    <version>6.6.0</version>
 		    <optional>true</optional><!-- EsTransportSearchServicesPlugin -->
 		</dependency>
 		<dependency>
-	        <groupId>org.elasticsearch.plugin</groupId>
-	        <artifactId>transport-netty4-client</artifactId> 
-	        <version>5.6.8</version> <!-- required by ESEmbeddedSearchServicesPlugin -->
+	        <groupId>org.codelibs.elasticsearch.module</groupId>
+	        <artifactId>analysis-common</artifactId> 
+	        <version>6.6.0</version> <!-- required by ESEmbeddedSearchServicesPlugin -->
 	        <optional>true</optional>
 	    </dependency>
-	    <!-- ES requires 2.9.1 -->
+	   	<dependency>
+		    <groupId>org.codelibs.elasticsearch.module</groupId>
+		    <artifactId>mapper-extras</artifactId>
+		    <version>6.6.0</version> <!-- required by ESEmbeddedSearchServicesPlugin -->
+	        <optional>true</optional>
+		</dependency>
+	    
+	    <!-- ES requires 2.11.2 -->
 	    <dependency>
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-api</artifactId>
-		    <version>2.11.0</version>
+		    <version>2.11.2</version>
 		</dependency>
 		
 		<!-- Connections Pool -->
