--- a/vertigo-account-api/pom.xml
+++ b/vertigo-account-api/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo</artifactId>
-		<version>1.1.3-SNAPSHOT</version>
+		<version>1.1.3</version>
 	</parent>
 
 	<artifactId>vertigo-account-api</artifactId>
