--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>1.1.3</version>
+		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>./vertigo-parent</relativePath>
 	</parent>
 
@@ -48,7 +48,7 @@
 		<connection>scm:git:https://github.com/KleeGroup/vertigo.git</connection>
 		<developerConnection>scm:git:https://github.com/KleeGroup/vertigo.git</developerConnection>
 		<url>scm:git:https://github.com/KleeGroup/vertigo.git</url>
-		<tag>vertigo-1.1.3</tag>
+		<tag>vertigo-1.1.2</tag>
 	</scm>
 	
 </project>
