--- a/vertigo-studio/pom.xml
+++ b/vertigo-studio/pom.xml
@@ -72,12 +72,14 @@
 			<groupId>com.sparkjava</groupId>
 			<artifactId>spark-core</artifactId>
 			<version>2.8.0</version>
+			<optional>true</optional>
 		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.199</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -87,13 +89,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>javax.servlet-api</artifactId> <version>3.1.0</version> 
-			<scope>test</scope> </dependency> -->
-		<!-- http://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.25</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
