--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>./vertigo-parent</relativePath>
 	</parent>
 
@@ -45,10 +45,10 @@
 	</modules>
 
 	<scm>
-		<connection>scm:git:https://github.com/KleeGroup/vertigo.git</connection>
-		<developerConnection>scm:git:https://github.com/KleeGroup/vertigo.git</developerConnection>
-		<url>scm:git:https://github.com/KleeGroup/vertigo.git</url>
-		<tag>vertigo-2.0.0-SNAPSHOT</tag>
+		<connection>scm:git:https://github.com/vertigo-io/vertigo.git</connection>
+		<developerConnection>scm:git:https://github.com/vertigo-io/vertigo.git</developerConnection>
+		<url>scm:git:https://github.com/vertigo-io/vertigo.git</url>
+		<tag>vertigo-2.0.0</tag>
 	</scm>
 	
 </project>
