--- a/vertigo-parent/pom.xml
+++ b/vertigo-parent/pom.xml
@@ -4,11 +4,11 @@
 
 	<groupId>io.vertigo</groupId>
 	<artifactId>vertigo-parent</artifactId>
-	<version>2.1.0-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>vertigo-parent</name>
 	<description>Vertigo is a simple java project starter</description>
-	<url>https://github.com/KleeGroup/vertigo</url>
+	<url>https://github.com/vertigo-io/vertigo</url>
 
 	<licenses>
 		<license>
@@ -37,10 +37,10 @@
 	</developers>
 	
 	<scm>
-		<connection>scm:git:https://github.com/KleeGroup/vertigo.git</connection>
-		<developerConnection>scm:git:https://github.com/KleeGroup/vertigo.git</developerConnection>
-		<url>scm:git:https://github.com/KleeGroup/vertigo.git</url>
-		<tag>vertigo-2.0.0-SNAPSHOT</tag>
+		<connection>scm:git:https://github.com/vertigo-io/vertigo.git</connection>
+		<developerConnection>scm:git:https://github.com/vertigo-io/vertigo.git</developerConnection>
+		<url>scm:git:https://github.com/vertigo-io/vertigo.git</url>
+		<tag>vertigo-2.0.0</tag>
 	</scm>
 
 	<distributionManagement>
