--- a/vertigo-studio/pom.xml
+++ b/vertigo-studio/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.vertigo</groupId>
 		<artifactId>vertigo-parent</artifactId>
-		<version>2.0.0</version>
+		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../vertigo-parent</relativePath>
 	</parent>
 
