Revert "[all] switch to redis-connector"
This reverts commit 3c5fb021f4c373e96c7396df89071ad305313b89.

--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -49,17 +49,18 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.vertigo</groupId>
-			<artifactId>vertigo-redis-connector</artifactId>
-			<version>${vertigo.version}</version>
-			<optional>true</optional>
-		</dependency>
-		
-		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.25</version> <!-- pour EhCachePlugin -->
 		</dependency>
+
+		<!--redis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
 
 		<!-- tests -->
 		<dependency>
