[All] Updated libs versions
junit-jupiter 5.4.2 -> 5.5.2
freemarker 2.3.28 -> 2.3.29
spark 2.8.0 -> 2.9.1
rest-assured 3.3.0 -> 4.1.2
log4j-core 2.11.2 -> 2.12.1
slf4j 1.7.25 -> 1.7.28
cglib 3.2.10 -> 3.3.0
gson 2.8.5 -> 2.8.6
snakeyaml 1.23 -> 1.25
servlet-api 3.1.0 -> 4.0.1
h2       1.4.199 -> 1.4.200
postgresql 42.2.5 -> 42.2.8
c3p0   0.9.5.3 -> 0.9.5.4
janino 3.0.8 -> 3.1.0
ehcache 2.10.6 -> 3.8.1
jedis 2.9.0 -> 3.1.0
lucene 8.0.0 -> 8.2.0
elasticsearch 7.1.0 -> 7.4.1

--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>com.mchange</groupId>
 			<artifactId>c3p0</artifactId>
-			<version>0.9.5.3</version>
+			<version>0.9.5.4</version>
 			<optional>true</optional>
 		</dependency>
 
@@ -37,15 +37,15 @@
 		<dependency>
 			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
-			<version>3.0.8</version>
+			<version>3.1.0</version>
 			<optional>false</optional><!-- pour JaninoExpressionEvaluatorPlugin -->
 		</dependency>
 
 		<!--cache -->
 		<dependency>
-			<groupId>net.sf.ehcache</groupId>
+			<groupId>org.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
-			<version>2.10.6</version> <!-- pour EhCachePlugin -->
+			<version>3.8.1</version> <!-- pour EhCachePlugin -->
 		</dependency>
 
 		<dependency>
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.9.0</version>
+			<version>3.1.0</version>
 		</dependency>
 
 
@@ -73,7 +73,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.199</version>
+			<version>1.4.200</version>
 			<scope>test</scope>
 		</dependency>
 
