--- a/vertigo-commons-impl/pom.xml
+++ b/vertigo-commons-impl/pom.xml
@@ -25,6 +25,11 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<dependency>
+		   <groupId>org.apache.logging.log4j</groupId>
+		   <artifactId>log4j-slf4j-impl</artifactId>
+		   <version>2.12.1</version> <!-- pour lien vers log4j de vertigo-core -->
+		</dependency>
 
 		<dependency>
 			<groupId>com.mchange</groupId>
@@ -45,13 +50,8 @@
 		<dependency>
 			<groupId>org.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
-			<version>3.8.1</version> <!-- pour EhCachePlugin -->
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.25</version> <!-- pour EhCachePlugin -->
+			<version>3.8.1</version> 
+			<optional>true</optional> <!-- pour EhCachePlugin -->
 		</dependency>
 
 		<!--redis -->
